# Ingenium

./: Board.cpp  CMakeLists.txt  LICENSE  Piece.hpp  README.md  chess_board.cpp  chess_board.h  main.cpp
