cmake_minimum_required(VERSION 3.10)
project(Ingenium)

set(CMAKE_CXX_STANDARD 11)

add_executable(chess_engine main.cpp)

# Add any additional source files here if needed
# Example: add_executable(chess_engine main.cpp chess.cpp)

# Add any additional libraries here if needed
# Example: target_link_libraries(chess_engine some_library)
